--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,6 @@ header {
   display: flex;
   justify-content: space-between;
   font-weight: 600;
-  padding: 10px 0;
+  padding-bottom: 10px;
   font-size: 17px;
 }
