--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -45,6 +45,7 @@
 @media only screen and (min-width: 575px) and (max-width: 1200px) {
   .layout-section {
     width: 80%;
+    padding: 0;
   }
 }
 
@@ -52,5 +53,6 @@
 @media only screen and (max-width: 575px) {
   .layout-section {
     width: 80%;
+    padding: 0;
   }
 }
