--- a/src/stylesheets/mainCard.css
+++ b/src/stylesheets/mainCard.css
@@ -20,10 +20,14 @@
   width: 80px;
   height: 80px;
   position: absolute;
+  position: absolute;
   top: -25px;
-  left: 40%;
+  left: 0;
+  right: 0;
+  margin: auto;
   border-radius: 100%;
   border: solid 6px var(--blackbg);
   background-image: url(../../assets/img/me.png);
   background-size: contain;
+  filter: saturate(0);
 }
